--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
-﻿/Pokemon/Pokemon/obj/
+﻿# Pokemon
+/Pokemon/Pokemon/obj/
 /Pokemon/Pokemon/bin/
 /Pokemon/.idea
 /Pokemon/Pokemon/wwwroot/lib/bootstrap/dist
 /Pokemon/Pokemon/wwwroot/lib/bootstrap/LICENSE
 /Pokemon/Pokemon/wwwroot/lib/font-awesome
+
+# Typescript
+/typescript/.idea
