--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,13 @@
 ﻿# root
 /.idea
+
 # Pokemon
 /Pokemon/Pokemon/obj/
 /Pokemon/Pokemon/bin/
 /Pokemon/.idea
 /Pokemon/*/bin
 /Pokemon/*/obj
+/Pokemon/Pokemon/wwwroot/lib/bootstrap
 /Pokemon/Pokemon/wwwroot/lib/bootstrap/dist
 /Pokemon/Pokemon/wwwroot/lib/bootstrap/LICENSE
 /Pokemon/Pokemon/wwwroot/lib/font-awesome
