--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,8 @@
 /Pokemon/Pokemon/wwwroot/lib/bootstrap/dist
 /Pokemon/Pokemon/wwwroot/lib/bootstrap/LICENSE
 /Pokemon/Pokemon/wwwroot/lib/font-awesome
+/Pokemon/WebApplication1
+/Pokemon/.vs
 
 # Typescript
 /typescript/.idea
